--- a/canvas-clip-image/package.json
+++ b/canvas-clip-image/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^4.0.1",
-    "canvas": "^2.6.1",
-    "image-size": "^0.8.3"
+    "canvas": "^2.6.1"
   }
 }
