--- a/canvas-blank-area/package.json
+++ b/canvas-blank-area/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "archiver": "^4.0.1",
     "canvas": "^2.6.1",
-    "glob": "^7.1.6",
-    "image-size": "^0.8.3"
+    "glob": "^7.1.6"
   }
 }
