--- a/batch-modify-filenames/batch-front-end/package.json
+++ b/batch-modify-filenames/batch-front-end/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
