--- a/batch-modify-filenames/batch-front-end/package.json
+++ b/batch-modify-filenames/batch-front-end/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.6.2",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
