--- a/batch-modify-filenames/batch-front-end/package.json
+++ b/batch-modify-filenames/batch-front-end/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.6.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.2",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5"
